another fix attempt for hover on mobile

--- a/css/shortcodes/team.css
+++ b/css/shortcodes/team.css
@@ -82,19 +82,7 @@
 
 .team-member:hover .team-hover,
 .team-member:hover .team-hover .desk,
-.team-member:hover .team-hover .s-link {
-    opacity: 1;
-}
-
-
-.team-member:hover .team-hover .s-link {
-    bottom: 10%;
-}
-
-.team-member:hover .team-hover .desk {
-    top: 45%;
-}
-
+.team-member:hover .team-hover .s-link, 
 .team-member:focus .team-hover,
 .team-member:focus .team-hover .desk,
 .team-member:focus .team-hover .s-link {
@@ -102,14 +90,15 @@
 }
 
 
+.team-member:hover .team-hover .s-link,
 .team-member:focus .team-hover .s-link {
     bottom: 10%;
 }
 
+.team-member:hover .team-hover .desk, 
 .team-member:focus .team-hover .desk {
     top: 45%;
 }
-
 
 .team-hover .desk {
     position: absolute;
